--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "gatsby-plugin-glslify",
   "description": "Import glsl/vert/frag files and process them with Glslify",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Onno Visser <visser.onno@gmail.com>",
   "bugs": {
     "url": "https://github.com/onnovisser/gatsby-plugin-glslify/issues"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "glslify-loader": "^2.0.0"
   },
+  "devDependencies": {},
   "homepage": "https://github.com/onnovisser/gatsby-plugin-glslify#readme",
   "keywords": [
     "gatsby",
