--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "gatsby-plugin-glslify",
   "description": "Import glsl/vert/frag files and process them with Glslify",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "author": "Onno Visser <visser.onno@gmail.com>",
   "bugs": {
     "url": "https://github.com/onnovisser/gatsby-plugin-glslify/issues"
   },
   "dependencies": {
+    "babel-plugin-glsl": "^0.0.1-alpha.2",
     "glslify-loader": "^2.0.0"
   },
   "devDependencies": {},
+  "files": [
+    "index.js",
+    "gatsby-node.js"
+  ],
   "homepage": "https://github.com/onnovisser/gatsby-plugin-glslify#readme",
   "keywords": [
     "gatsby",
@@ -24,5 +29,5 @@
   "peerDependencies": {
     "gatsby": "^2.0.0"
   },
-  "repository": "https://github.com/onnovisser/gatsby/gatsby-plugin-glslify"
+  "repository": "https://github.com/onnovisser/gatsby-plugin-glslify"
 }
