--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-node_modules
+# Dependency managers
+node_modules/
 yarn.lock
+
+# Logs
+*.log
+
+# Editor specific
+.idea/
+.vscode/
+
+# General files
+*~
+.DS_STORE
